# Vestio

./: .env.example  .gitignore  README.md  package-lock.json  package.json  vitest.config.ts
.test/collectors/: mapping.test.ts
.test/pipeline/: conftest.py  test_e2e_simulation.py  test_module_processor.py  test_module_store.py
.test/pipeline/processor/: test_downloader.py  test_embedder.py  test_pipeline.py  test_vlm.py
.test/pipeline/store/: test_db.py
pipeline/: cli.py  inspect_db.py  preview.py  pyproject.toml
pipeline/processor/: downloader.py  embedder.py  pipeline.py  prompts.py  vlm.py
pipeline/store/: __init__.py  db.py  schema.py
