[project]
name = "vestio-pipeline"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "lancedb>=0.20",
    "transformers>=4.45",
    "torch>=2.2",
    "anthropic>=0.40",
    "Pillow>=10.0",
    "pyarrow>=17.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["processor*", "store*", "synthesizer*"]

[tool.pytest.ini_options]
testpaths = ["../.test/pipeline"]
pythonpath = ["."]
